Udpated to Terraform 12. Added CRD reference resolution and undefined reference detection

--- a/cli/launchpad/static/tmpl/tf/google_folder.tf.tmpl
+++ b/cli/launchpad/static/tmpl/tf/google_folder.tf.tmpl
@@ -1,4 +1,4 @@
 resource "google_folder" "{{ .Id }}" {
   display_name = "{{ .DisplayName }}"
-  parent       = "{{ .Parent }}"
+  parent       = {{ .Parent }}
 }
