feat: add blueprint test init

--- a/cli/bptest/templates/go.mod.tmpl
+++ b/cli/bptest/templates/go.mod.tmpl
@@ -3,6 +3,6 @@ module github.com/terraform-google-modules/%s/test/integration
 go 1.16
 
 require (
-	github.com/GoogleCloudPlatform/cloud-foundation-toolkit/infra/blueprint-test v0.0.0-20220317050137-1c8897fbd42c
-	github.com/stretchr/testify v1.7.0
+	github.com/GoogleCloudPlatform/cloud-foundation-toolkit/infra/blueprint-test v0.4.0
+	github.com/stretchr/testify v1.8.1
 )
